syntax = "proto3";

package biz;

option go_package = "pb/v1";

message GetUsersRequest {
    int32 user_id = 1;
    string auth_key = 2;
    int32 message_id = 3;
}

message GetUsersResponse {
    // this should be changed to be able to model an array
    string users = 1;
    int32 message_id = 2;
}

message GetUsersWithSQLInjectRequest {
    string user_id = 1;
    string auth_key = 2;
    int32 message_id = 3;
}


service Business
{
    rpc GetUsers(GetUsersRequest) returns (GetUsersResponse) {}
    rpc GetUsersWithSQLInject(GetUsersWithSQLInjectRequest) returns (GetUsersResponse) {}
}